
cmake_minimum_required(VERSION 2.4)


PROJECT(yast2-qt-graph)
SET( CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/share/cmake/Modules" ${CMAKE_MODULE_PATH} )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Woverloaded-virtual" )
SET( CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -g -Wall" )
set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DQT_NO_DEBUG -DNDEBUG")

SET( RPMNAME "yast2-qt-graph" )

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(Yast)
FIND_PACKAGE(Libyui REQUIRED)
INCLUDE(YastCommon)

SET(Y2QT_LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)

GENERATE_PACKAGING(${RPMNAME} ${VERSION})

ADD_SUBDIRECTORY(src)
