PROJECT(yast2-qt)
SET( CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/share/cmake/Modules" ${CMAKE_MODULE_PATH} )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Woverloaded-virtual -Wno-deprecated" )
SET( CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -g -Wall" )
set( CMAKE_CXX_FLAGS_RELEASE   "${CMAKE_CXX_FLAGS_RELEASE} -DQT_NO_DEBUG -DNDEBUG")

SET( RPMNAME "yast2-qt" )

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(Yast REQUIRED)
INCLUDE(YastCommon)

SET(Y2QT_ICONDIR ${CMAKE_INSTALL_PREFIX}/share/YaST2/theme/current)
SET(Y2QT_LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
SET(Y2QT_THEMEDIR ${CMAKE_INSTALL_PREFIX}/share/YaST2/theme)

ADD_SUBDIRECTORY(src)

